# MyFruitShop

./: .env.dev  .env.prod  .env.prod.db  .gitignore  Dockerfile  Dockerfile.prod  Makefile  celerybeat-schedule  docker-compose.prod.yml  docker-compose.yml  dump.rdb  entrypoint.sh  manage.py  pyproject.toml  requirements.txt
MyFruitShop/: __init__.py  asgi.py  celery.py  routing.py  settings.py  urls.py  wsgi.py
admin_panel/: consumers.py  forms.py  models.py  tasks.py  urls.py  views.py
admin_panel/fixtures/: data_init.json
admin_panel/migrations/: 0001_initial.py  0002_remove_message_room.py  0003_rename_message_chatmessage.py  0004_fruitstorage.py  0005_bank_alter_chatmessage_table_and_more.py  0006_rename_balance_fruitstorage_amount_fruitstorage_name_and_more.py  0007_operationjournal_status.py  0008_fruitstorage_price_alter_operationjournal_name.py  0009_remove_operationjournal_name_operationjournal_amount_and_more.py  0010_alter_operationjournal_options.py  0011_declaration_alter_fruitstorage_options_and_more.py  0012_delete_room.py  0013_alter_chatmessage_options_alter_declaration_file.py
nginx/: nginx.conf
static/admin_panel/: main.js
staticfiles/admin_panel/: main.js  main_cQ1Capg.js
supervisor/: supervisor.conf
templates/admin_panel/: main.html
users/: forms.py  urls.py  views.py
